# PDF4Ax

./: .gitattributes  .gitignore  Dev.md  PDF4Ax.sln  README.md  sourcing.bat
Ax/: AxVw.cpp  AxVw.h  Ext.cpp  Ext.h  UseG.h
BuildRunner/: BuildRunner.csproj  MenuForm.Designer.cs  MenuForm.cs  Program.cs
Frm/: AxFrm.cpp  AxFrm.h  Frm.cpp  Frm.h  Frm.rc  Frm.vcproj  Frm.vcxproj  Frm.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
MtInject/: MtInject.csproj  Program.cs
PDF4Ax/: AboutDlg.h  AxFrm.cpp  AxFrm.h  PDF4Ax.cpp  PDF4Ax.def  PDF4Ax.h  PDF4Ax.idl  PDF4Ax.rc  PDF4Ax.vcproj  PDF4Ax.vcxproj  PDF4Ax.vcxproj.filters  PDF4AxCtrl.cpp  PDF4AxCtrl.h  PDF4AxPropPage.cpp  PDF4AxPropPage.h  PDF4Axidl.h  ReadMe.txt  Setup_PDF4Ax.nsi  TUt.cpp  TUt.h  resource.h  stdafx.cpp  stdafx.h
PDFSpec/: AxVw.cpp  AxVw.h  FitRect3.h  PDFSpec.cpp  PDFSpec.h  PDFSpec.vcxproj  PDFSpec.vcxproj.filters  PDFSpecExt.cpp  PDFSpecImports.h  PaperSizeLite.h  PaperSizeUtil.h  PrintOpts.h  PrintOptsPage.cpp  PrintOptsPage.h  PrintingNowDialog.h  PrintintNowDialog.cpp  RUt.h  pch.h
RenderTest/: RenderTest.cpp  RenderTest.vcxproj  RenderTest.vcxproj.filters
Samples/: ハローワールド.docx
ViewerTest/: MainFrm.cpp  MainFrm.h  Resource.h  ViewerTest.cpp  ViewerTest.h  ViewerTest.rc  ViewerTest.vcxproj  ViewerTest.vcxproj.filters  ViewerTestDoc.cpp  ViewerTestDoc.h  ViewerTestView.cpp  ViewerTestView.h  framework.h
cairo/: meson.build
fontconfig/: Makefile  config.h  config.status  fontconfig-zip  fontconfig.pc  libtool
freetype/: CMakeLists.txt
iconv-wrap/: CMakeLists.txt
(+844 files in other folders)
